更新部署脚本